<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Category" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Courses" />
        <item
            android:id="@+id/nav_mentors"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Mentors" />
        <item
            android:icon="@drawable/ic_backspace_black_24dp"
            android:id="@+id/nav_subjects"
            android:title="@string/Subjects" />

    </group>
</menu>