<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="com.coremacasia.learnatadmin.menus.category.CategoryList"
        android:label="@string/Category"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.coremacasia.learnatadmin.menus.courses.Courses"
        android:label="@string/Courses"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_mentors"
        android:name="com.coremacasia.learnatadmin.menus.mentors.Mentor"
        android:label="@string/Mentors"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_subjects"
        android:name="com.coremacasia.learnatadmin.menus.mentors.Mentor"
        android:label="@string/Subjects"
        tools:layout="@layout/fragment_subjects" />
</navigation>